--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -20,13 +20,13 @@
   <body>
 
     <!-- loading ============================================================-->
-    <div class="bg">
+    <!-- <div class="bg">
       <div class="loading">
         <div>
             <span class="dot"></span>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- main ===============================================================-->
       <div class="star" id="home">
@@ -182,7 +182,7 @@
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
                   <div class="skill_border">
                     <div class="wow zoomIn animated">
-                      <span class="chart" data-percent="86">
+                      <span class="chart" data-percent="85">
                     		<span class="percent"></span>
                     	</span>
                     </div>
@@ -197,7 +197,7 @@
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
                   <div class="skill_border">
                     <div class="wow zoomIn animated">
-                      <span class="chart" data-percent="86">
+                      <span class="chart" data-percent="80">
                         <span class="percent"></span>
                       </span>
                     </div>
@@ -214,7 +214,7 @@
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
                   <div class="skill_border">
                     <div class="wow zoomIn animated">
-                      <span class="chart" data-percent="86">
+                      <span class="chart" data-percent="65">
                         <span class="percent"></span>
                       </span>
                     </div>
