--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -391,9 +391,9 @@
         </article>
       </section>
       <!-- 위로가기 버튼 -->
-      <button id="goTop"><i class="fas fa-arrow-up"></i></button>
+      <button id="goTop"><i class="fas fa-chevron-up"></i></button>
       <!-- 아래로가기 버튼 -->
-      <button id="goDown"><i class="fas fa-arrow-down"></i></button>
+      <button id="goDown"><i class="fas fa-chevron-down"></i></button>
 
       <!-- footer -->
       <footer>
