--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -379,13 +379,13 @@
               <li></li>
             </ul>
           </div>
-          <div class="fontact_form">
-            <!-- 폼들어갈 곳 -->
-            <script src="">
-            </script>
-            <div class="">
-              <iframe src="" width="" height=""></iframe>
-            </div>
+          <div class="wow fadeInUp animated contact_form">
+            <a href="mailto:jar3543@gmail.com">SEND AN EMAIL</a>
+            <!-- <script src="//www.powr.io/powr.js?external-type=html"></script>
+            <div class="powr-contact-form" id="3f19dc28_1550564609">
+              <iframe src="https://www.powr.io/plugins/contact-form/view?unique_label=3f19dc28_1550564609&external_type=iframe"
+              width="100%" height="600" frameborder="0"></iframe>
+            </div> -->
           </div>
         </div>
         </article>
@@ -420,12 +420,12 @@
     <!-- <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script> -->
     <script src="js/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
-    <script src="js/star.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/isotope-docs.min.js"></script>
+    <script src="js/jquery.easypiechart.min.js"></script>
+    <script src="js/star.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/portfolio.js"></script>
-    <script src="js/jquery.easypiechart.min.js"></script>
     	<script>
     	$(function() {
     		$('.chart').easyPieChart({
