--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Areum Jeon | Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto|Nanum+Gothic+Coding|Nanum+Myeongjo|Gothic+A1|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -20,13 +20,13 @@
   <body>
 
     <!-- loading ============================================================-->
-    <!-- <div class="bg">
+    <div class="bg">
       <div class="loading">
         <div>
             <span class="dot"></span>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- main ===============================================================-->
       <div class="star" id="home">
@@ -51,14 +51,14 @@
                   <div class="bar11">E</div>
                 </div>
                 <ul class="maintext2">
-                  <li class="wow fadeInUp animated">Portfolio</li>
+                  <li class="wow fadeInUp animated">PORTFOLIO</li>
                   <li class="wow fadeInUp animated">/</li>
-                  <li class="wow fadeInUp animated">Areum Jeon</li>
+                  <li class="wow fadeInUp animated">AREUM JEON</li>
                 </ul>
               </div>
           <!-- </div> -->
         </div>
-        <div class="intro">
+        <div class="wow fadeInUp animated intro"  data-wow-delay="1s">
           <button><i class="fas fa-angle-double-down"></i></button>
         </div>
       </div>
@@ -96,7 +96,7 @@
               <div class="swiper-slide slide_one">
                 <!-- <p class="wow fadeInLeft animated">slide from left</p> -->
                 <!-- <div data-swiper-animation="fadeIn" data-duration=".5s" data-delay="1s">Animation</div> -->
-                <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
+                <div class="parallax-bg" style="background-image:url(images/mainslideimg1.jpg)" data-swiper-parallax="-23%">
                 </div>
                 <div class="slide_text">
                   <!-- <p>WELCOME<br>TO MY<br>PORTFOLIO PAGE</p> -->
@@ -109,13 +109,13 @@
                   <p>CHALLENGE</p>
                 </div> -->
                 <div class="button_link1">
-                  <a href="#"><em>about me</em></a>
-                  <a href="#"><em>my work</em></a>
+                  <a href="#">about me</a>
+                  <a href="#">my work</a>
                 </div>
                 <!-- 고정 텍스트 end -->
               </div>
               <div class="swiper-slide slide_two">
-                <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
+                <div class="parallax-bg" style="background-image:url(images/mainslideimg2.jpg)" data-swiper-parallax="-23%">
                 </div>
                 <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
                   <!-- 클래스 로고 백그라운드에 이미지 깔기 -->
@@ -135,8 +135,8 @@
                   <p>challenge</p>
                 </div> -->
                 <div class="button_link2">
-                  <a href="#"><em>about me</em></a>
-                  <a href="#"><em>my work</em></a>
+                  <a href="#">about me</a>
+                  <a href="#">my work</a>
                 </div>
               <!-- 고정 텍스트 end -->
               </div>
@@ -150,23 +150,23 @@
           <article id="about" class="box">
             <div class="container">
               <h2 class="wow fadeInUp animated">ABOUT ME</h2>
+              <p class="wow fadeInUp animated" data-wow-delay="1s">I am areum Jeon</p>
               <div class="col-xs-12 col-sm-6 col-md-6 about_img wow fadeInUp animated">
                 <img class="wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="3s" src="images/about.png" alt="일러스트 이미지">
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 aboutext_wrap wow fadeInUp animated">
                 <div class="aboutext">
-                  <p>"안녕하세요 전아름입니다.<br>
-                  웹 디자인,퍼블리싱에 열정과 성실함으로 도전하고있습니다.<br>
+                  <p>"안녕하세요 전아름입니다.
+                  웹 디자인,퍼블리싱에 열정과 성실함으로 도전하고있습니다.
                   저는 깔끔하고 인터랙티브한 디자인과 실무에 적합한 퍼블리싱을 추구
                   하며 디자인과 퍼블리싱의 두 가지 모두 살릴 수 있는
-                  웹 전문가가 되고싶습니다.<br>
-                  좋아하는 일을 즐겁게 신나게 잘하면서 살고 싶어<br>
-                  오늘도 달리고 있습니다."
+                  웹 전문가가 되고싶습니다.
+                  <span>좋아하는 일을 즐겁게 신나게 성실하게 하겠습니다."</span>
                   </p>
                 </div>
                 <!-- button -->
                 <div class="about_button wow fadeInUp animated">
-                  <a href="#"><em>Please turn over for more profile</em></a>
+                  <button class="msgbtn"><em>Please turn over for more profile</em></button>
                 </div>
               </div>
             </div>
@@ -176,7 +176,7 @@
         <article id="skill" class="box">
           <div class="container">
             <h2 class="wow fadeInUp animated">WHAT I CAN DO</h2>
-            <p>I am web publisher</p>
+            <p class="wow fadeInUp animated" data-wow-delay="1s">I am web publisher</p>
             <div class="skill_area">
               <div class="row">
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
@@ -274,95 +274,61 @@
               <!-- works -->
               <div class="row grid">
                 <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="Responsive">
-                  <div class="panel panel-default">
-                    <!-- <div class="panel-heading"> -->
-                      <!-- <h3 class="panel-title"> -->
-                        <!-- <span class="title">반응형 사이트</span> -->
-                        <!-- <span class="label-primary label pull-right">Responsive</span> -->
-                      <!-- </h3> -->
-                    <!-- </div> -->
-                    <div class="panel-body">
+                  <div class="panel panel-default portfolio_item">
+                    <div class="panel-body item_wrap">
                       <img src="images/F&B.png" alt="포트폴리오 작업물. f&b 이미지" class="img-responsive">
-                      <div class="icon_wrap">
-                        <a href="#" class="glyphicon glyphicon-search" data-src="">
-                          <span class="sr-only">자세히보기</span>
-                        </a>
+                      <a class="overlay_background" href="#"></a>
+                      <div class="item_meta">
+                        <h3 class="item_title ">
+                          <a href="#"><strong>F&b</strong><br>쇼핑몰사이트</a>
+                        </h3>
+                        <h5 class="item_category">pc/publishing</h5>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
-                  <div class="panel panel-default">
-                    <!-- <div class="panel-heading"> -->
-                      <!-- <h3 class="panel-title"> -->
-                        <!-- <span class="title">starbuck 모바일</span> -->
-                        <!-- <span class="label label-success pull-right">PC</span> -->
-                      <!-- </h3> -->
-                    <!-- </div> -->
-                    <div class="panel-body">
+                  <div class="panel panel-default portfolio_item">
+                    <div class="panel-body item_wrap">
                       <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
-                      <div class="icon_wrap">
-                        <a href="" class="glyphicon glyphicon-search" data-src="images/mywork2_full.png">
-                          <span class="sr-only">자세히보기</span>
-                        </a>
+                      <a class="overlay_background" href="#"></a>
+                      <div class="item_meta">
+                        <h3 class="item_title ">
+                          <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
+                        </h3>
+                        <h5 class="item_category">pc/design/publishing</h5>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
-                  <div class="panel panel-default">
-                    <!-- <div class="panel-heading"> -->
-                      <!-- <h3 class="panel-title"> -->
-                        <!-- <span class="title">dodream</span> -->
-                        <!-- <span class="label label-danger pull-right">PC</span> -->
-                      <!-- </h3> -->
-                    <!-- </div> -->
-                    <div class="panel-body">
+                  <div class="panel panel-default portfolio_item">
+                    <div class="panel-body item_wrap">
                       <img src="images/dodream.png" alt="포트폴리오 작업물. dodream 이미지" class="img-responsive">
-                      <div class="icon_wrap">
-                        <a href="" class="glyphicon glyphicon-search" data-src="images/mywork3_full.png">
-                          <span class="sr-only">자세히보기</span>
-                        </a>
+                      <a class="overlay_background" href="#"></a>
+                      <div class="item_meta">
+                        <h3 class="item_title ">
+                          <a href="#"><strong>DODREAM</strong></a>
+                        </h3>
+                        <h5 class="item_category">pc/상세페이지제작</h5>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
-                  <div class="panel panel-default">
-                    <!-- <div class="panel-heading"> -->
-                      <!-- <h3 class="panel-title"> -->
-                        <!-- <span class="title">moote</span> -->
-                        <!-- <span class="label label-danger pull-right">PC</span> -->
-                      <!-- </h3> -->
-                    <!-- </div> -->
-                    <div class="panel-body">
+                  <div class="panel panel-default portfolio_item">
+                    <div class="panel-body item_wrap">
                       <img src="images/moote.png" alt="포트폴리오 작업물. moote 이미지" class="img-responsive">
-                      <div class="icon_wrap">
-                        <a href="" class="glyphicon glyphicon-search" data-src="images/mywork4_full.png">
-                          <span class="sr-only">자세히보기</span>
-                        </a>
+                      <a class="overlay_background" href="#"></a>
+                      <div class="item_meta">
+                        <h3 class="item_title ">
+                          <a href="#">싱어송라이터<br><strong>MOOT</strong><br>소개페이지</a>
+                        </h3>
+                        <h5 class="item_category">pc</h5>
                       </div>
                     </div>
                   </div>
                 </div>
-                <!-- <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h3 class="panel-title">
-                        <span class="title">브랜드 리뉴얼 사이트</span>
-                        <span class="label label-info pull-right">PC</span>
-                      </h3>
-                    </div>
-                    <div class="panel-body">
-                      <img src="images/mywork4.png" alt="포트폴리오 작업물. 메가박스 이미지" class="img-responsive">
-                      <div class="icon_wrap">
-                        <a href="" class="glyphicon glyphicon-search" data-src="images/mywork4_full.png">
-                          <span class="sr-only">자세히보기</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div> -->
               </div>
             </div>
           </div>
@@ -372,20 +338,14 @@
         <article id="contact" class="box">
           <div class="container">
             <h2 class="wow fadeInUp animated">CONTACT</h2>
-          <div class="contact_info">
-            <p></p>
+          <div class="wow fadeInUp animated contact_info">
+            <p>"Get in touch!"</p>
             <ul>
-              <li></li>
-              <li></li>
+              <li><i class="far fa-envelope"></i>jar3543@gmail.com</li>
             </ul>
           </div>
           <div class="wow fadeInUp animated contact_form">
             <a href="mailto:jar3543@gmail.com">SEND AN EMAIL</a>
-            <!-- <script src="//www.powr.io/powr.js?external-type=html"></script>
-            <div class="powr-contact-form" id="3f19dc28_1550564609">
-              <iframe src="https://www.powr.io/plugins/contact-form/view?unique_label=3f19dc28_1550564609&external_type=iframe"
-              width="100%" height="600" frameborder="0"></iframe>
-            </div> -->
           </div>
         </div>
         </article>
