background-img(required)

--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -94,7 +94,7 @@
           <div class="swiper-container main_slide">
             <div class="swiper-wrapper">
               <div class="swiper-slide slide_one">
-                <div class="parallax-bg" style="background-image:url(images/mainslideimg1.jpg)" data-swiper-parallax="-23%">
+                <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
                 </div>
                 <div class="slide_text">
                   <p>WELCOME TO MY PORTFOLIO PAGE</p>
@@ -105,8 +105,8 @@
                 </div>
               </div>
               <div class="swiper-slide slide_two">
-                <!-- <div class="parallax-bg" style="background-image:url(images/slideimg2.jpg)" data-swiper-parallax="-23%">
-                </div> -->
+                <div class="parallax-bg" style="background-image:url(images/mainslideimg.jpg)" data-swiper-parallax="-23%">
+                </div>
                 <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
                   <img src="images/html_Logo.png" alt="html 로고 이미지">
                   <img src="images/css_Logo.png" alt="css 로고 이미지">
