--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -94,7 +94,7 @@
           <div class="swiper-container main_slide">
             <div class="swiper-wrapper">
               <div class="swiper-slide slide_one">
-                <div class="parallax-bg" style="background-image:url(images/main.jpg)" data-swiper-parallax="-23%">
+                <div class="parallax-bg" style="background-image:url(images/swiperslidebgme_one.jpg)" data-swiper-parallax="-23%">
                 </div>
                 <div class="slide_text">
                   <p>WELCOME TO MY PORTFOLIO PAGE</p>
@@ -105,7 +105,7 @@
                 </div>
               </div>
               <div class="swiper-slide slide_two">
-                <div class="parallax-bg" style="background-image:url(images/main.jpg)" data-swiper-parallax="-23%">
+                <div class="parallax-bg" style="background-image:url(images/swiperslidebgme_two.jpg)" data-swiper-parallax="-23%">
                 </div>
                 <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
                   <img src="images/html_Logo.png" alt="html 로고 이미지">
