--- a/AreumJeon/aboutmemore.html
+++ b/AreumJeon/aboutmemore.html
@@ -409,7 +409,9 @@
               <div class="clearfix" id="contentBox">
                 <div id="first" class="epilogue buttonBox">
                   <button>포트폴리오 사이트를 재정비하면서 저에대해 잘 표현하고 또 저라는 사람을
-                  최대한 담아내고자 많이 고민하고 노력했습니다.</button>
+                  최대한 담아내고자 많이 고민하고 노력했습니다.개성이 있는 디자인과 그 디자인을
+                  코딩으로기능 구현해 낼 수있는 스킬을 드러내고 그것들이실무중심이되어야 한다는
+                  것이었습니다.</button>
                   <div class="border"></div>
                   <div class="border"></div>
                 </div>
