--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -137,12 +137,11 @@
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 aboutext_wrap wow fadeInUp animated">
                 <div class="aboutext">
-                  <p>"안녕하세요 전아름입니다.
-                  웹 디자인,퍼블리싱에 열정과 성실함으로 도전하고있습니다.
-                  저는 깔끔하고 인터랙티브한 디자인과 실무에 적합한 퍼블리싱을 추구
-                  하며 디자인과 퍼블리싱의 두 가지 모두 살릴 수 있는
-                  웹 전문가가 되고싶습니다.
-                  <span>좋아하는 일을 즐겁게 신나게 성실하게 하겠습니다."</span>
+                  <p>"안녕하세요 웹 퍼블리셔 전아름입니다.
+                  좋아하는 일을 즐겁게 신나게 잘하고 싶습니다.
+                  저는 유저 친화적인 인터페이스를 디자인하여 유저가 원하는 정보에
+                  쉽게 접근할 수 있는 웹 페이지를 제작하고 더 나아가
+                  실무에 적합한 기능을 함께 구현하는 것을 목표로 하고있습니다.
                   </p>
                 </div>
                 <!-- button -->
@@ -163,7 +162,7 @@
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
                   <div class="skill_border">
                     <div class="wow zoomIn animated">
-                      <span class="chart" data-percent="85">
+                      <span class="chart" data-percent="80">
                     		<span class="percent"></span>
                     	</span>
                     </div>
@@ -178,7 +177,7 @@
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
                   <div class="skill_border">
                     <div class="wow zoomIn animated">
-                      <span class="chart" data-percent="80">
+                      <span class="chart" data-percent="90">
                         <span class="percent"></span>
                       </span>
                     </div>
@@ -195,7 +194,7 @@
                 <div id="skill_hover" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hover_wrap">
                   <div class="skill_border">
                     <div class="wow zoomIn animated">
-                      <span class="chart" data-percent="65">
+                      <span class="chart" data-percent="75">
                         <span class="percent"></span>
                       </span>
                     </div>
@@ -318,9 +317,11 @@
         </article>
         <article id="contact" class="box">
           <div class="container">
-            <h2 class="wow fadeInUp animated">CONTACT</h2>
+            <h2 class="wow fadeInUp animated">GET IN TOUCH</h2>
           <div class="wow fadeInUp animated contact_info">
-            <p>"Get in touch!"</p>
+            <p>"Taking a look at my portfolio is appreciated.</p>
+            <P>Have any suggestion or interested in working together?</P>
+            <p>please do not hesitate to contact me.</p>
             <ul>
               <li><i class="far fa-envelope"></i>jar3543@gmail.com</li>
             </ul>
