--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -215,21 +215,20 @@
         <article id="workprocess" class="box">
           <div class="container">
             <h2 class="wow fadeInUp animated">WORK PROCESS</h2>
-            <p></p>
             <div class="row">
-              <div class="col-xs-12 col-md-3 col-lg3">
+              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <img class="wow fadeInUp animated" src="images/workprocess_icon1.png" alt="work process create icon 이미지">
                 <h4 class="wow fadeInUp animated" data-wow-delay=".5s">1. create</h4>
               </div>
-              <div class="col-xs-12 col-md-3 col-lg3">
+              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <img class="wow fadeInUp animated" src="images/workprocess_icon2.png" alt="work process sketch icon 이미지">
                 <h4 class="wow fadeInUp animated" data-wow-delay=".5s">2. sketch</h4>
               </div>
-              <div class="col-xs-12 col-md-3 col-lg3">
+              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <img class="wow fadeInUp animated" src="images/workprocess_icon3.png" alt="work process design icon 이미지">
                 <h4 class="wow fadeInUp animated" data-wow-delay=".5s">3. design</h4>
               </div>
-              <div class="col-xs-12 col-md-3 col-lg3">
+              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <img class="wow fadeInUp animated" src="images/workprocess_icon4.png" alt="work process publish icon 이미지">
                 <h4 class="wow fadeInUp animated" data-wow-delay=".5s">4. publish</h4>
               </div>
@@ -253,7 +252,7 @@
 
               <!-- works -->
               <div class="row grid">
-                <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="Responsive">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="Responsive">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/F&B.png" alt="포트폴리오 작업물. f&b 이미지" class="img-responsive">
@@ -267,7 +266,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="PC">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
@@ -281,7 +280,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="PC">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/dodream.png" alt="포트폴리오 작업물. dodream 이미지" class="img-responsive">
@@ -295,7 +294,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item" data-category="PC">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 item" data-category="PC">
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/moote.png" alt="포트폴리오 작업물. moote 이미지" class="img-responsive">
@@ -359,7 +358,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper-animation@1/build/SwiperAnimation.min.js"></script> -->
-    <!-- <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script> -->
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/wow.min.js"></script>
