--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -58,7 +58,7 @@
               </div>
           <!-- </div> -->
         </div>
-        <div class="wow fadeInUp animated intro"  data-wow-delay="1s">
+        <div class="intro">
           <button><i class="fas fa-angle-double-down"></i></button>
         </div>
       </div>
@@ -94,8 +94,6 @@
           <div class="swiper-container main_slide">
             <div class="swiper-wrapper">
               <div class="swiper-slide slide_one">
-                <div class="parallax-bg" style="background-image:url(images/swiperslidebgme_one.jpg)" data-swiper-parallax="-23%">
-                </div>
                 <div class="slide_text">
                   <p>WELCOME TO MY PORTFOLIO PAGE</p>
                 </div>
@@ -105,9 +103,7 @@
                 </div>
               </div>
               <div class="swiper-slide slide_two">
-                <div class="parallax-bg" style="background-image:url(images/swiperslidebgme_two.jpg)" data-swiper-parallax="-23%">
-                </div>
-                <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
+                <!-- <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
                   <img src="images/html_Logo.png" alt="html 로고 이미지">
                   <img src="images/css_Logo.png" alt="css 로고 이미지">
                   <img src="images/javascript_Logo.png" alt="javascript 로고 이미지">
@@ -115,14 +111,16 @@
                   <img src="images/Bootstrap_Logo.png" alt="bootstrap 로고 이미지">
                   <img src="images/photoshop_Logo.png" alt="adobe photoshop 로고 이미지">
                   <img src="images/ai_Logo.png" alt="adobe illustrator 로고 이미지">
-                </div>
+                </div> -->
                 <div class="button_link2">
                   <a href="#">about me</a>
                   <a href="#">my work</a>
                 </div>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <!-- <div class="swiper-pagination"></div> -->
+            <div class="swiper-button-next"><i class="fas fa-chevron-right"></i></div>
+            <div class="swiper-button-prev"><i class="fas fa-chevron-left"></i></div>
           </div>
           <!-- swiper end -->
         </article>
@@ -256,7 +254,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/F&B.png" alt="포트폴리오 작업물. f&b 이미지" class="img-responsive">
-                      <a class="overlay_background" href="#"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>F&b</strong><br>쇼핑몰사이트</a>
@@ -270,7 +268,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
-                      <a class="overlay_background" href="#"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
@@ -284,7 +282,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/dodream.png" alt="포트폴리오 작업물. dodream 이미지" class="img-responsive">
-                      <a class="overlay_background" href="#"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>DODREAM</strong></a>
@@ -298,7 +296,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/moote.png" alt="포트폴리오 작업물. moote 이미지" class="img-responsive">
-                      <a class="overlay_background" href="#"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#">싱어송라이터<br><strong>MOOT</strong><br>소개페이지</a>
@@ -323,6 +321,7 @@
             <p>please do not hesitate to contact me.</p>
             <ul>
               <li><i class="far fa-envelope"></i>jar3543@gmail.com</li>
+              <li><i class="fas fa-phone"></i>010 6591 0763</li>
             </ul>
           </div>
           <div class="wow fadeInUp animated contact_form">
