--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -254,7 +254,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/F&B.png" alt="포트폴리오 작업물. f&b 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>F&b</strong><br>쇼핑몰사이트</a>
@@ -268,7 +268,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/sidmool_main.png" alt="포트폴리오 작업물. 시드물 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>SIDMOOL</strong><br>천연화장품쇼핑몰<br>리뉴얼사이트</a>
@@ -282,7 +282,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/dodream.png" alt="포트폴리오 작업물. dodream 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#"><strong>DODREAM</strong></a>
@@ -296,7 +296,7 @@
                   <div class="panel panel-default portfolio_item">
                     <div class="panel-body item_wrap">
                       <img src="images/moote.png" alt="포트폴리오 작업물. moote 이미지" class="img-responsive">
-                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/f&b.html"></a>
+                      <a class="overlay_background" href="https://jar3543.github.io/github/AreumJeon/work_f&b.html"></a>
                       <div class="item_meta">
                         <h3 class="item_title ">
                           <a href="#">싱어송라이터<br><strong>MOOT</strong><br>소개페이지</a>
