--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Areum Jeon | Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto|Nanum+Gothic+Coding|Nanum+Myeongjo|Gothic+A1|Open+Sans+Condensed:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Quicksand|Roboto|Nanum+Gothic+Coding|Nanum+Myeongjo|Gothic+A1|Open+Sans+Condensed:300|Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -135,7 +135,8 @@
               </div>
               <div class="col-xs-12 col-sm-6 col-md-6 aboutext_wrap wow fadeInUp animated">
                 <div class="aboutext">
-                  <p>"안녕하세요 웹 퍼블리셔 전아름입니다.
+                  <p>Hello</p>
+                  <p>"웹 퍼블리셔 전아름입니다.
                   좋아하는 일을 즐겁게 신나게 잘하고 싶습니다.
                   저는 유저 친화적인 인터페이스를 디자인하여 유저가 원하는 정보에
                   쉽게 접근할 수 있는 웹 페이지를 제작하고 더 나아가
