--- a/AreumJeon/index.html
+++ b/AreumJeon/index.html
@@ -89,46 +89,10 @@
 
     <!-- contents ==============================================================-->
       <section>
-        <!-- slide -->
-        <article id="slide" class="box">
-          <div class="swiper-container main_slide">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide slide_one">
-                <div class="slide_text">
-                  <p>WELCOME TO MY PORTFOLIO PAGE</p>
-                </div>
-                <div class="button_link1">
-                  <a href="#">about me</a>
-                  <a href="#">my work</a>
-                </div>
-              </div>
-              <div class="swiper-slide slide_two">
-                <!-- <div class="slide_logo" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="5s">
-                  <img src="images/html_Logo.png" alt="html 로고 이미지">
-                  <img src="images/css_Logo.png" alt="css 로고 이미지">
-                  <img src="images/javascript_Logo.png" alt="javascript 로고 이미지">
-                  <img src="images/jquery_Logo.png" alt="jquery 로고 이미지">
-                  <img src="images/Bootstrap_Logo.png" alt="bootstrap 로고 이미지">
-                  <img src="images/photoshop_Logo.png" alt="adobe photoshop 로고 이미지">
-                  <img src="images/ai_Logo.png" alt="adobe illustrator 로고 이미지">
-                </div> -->
-                <div class="button_link2">
-                  <a href="#">about me</a>
-                  <a href="#">my work</a>
-                </div>
-              </div>
-            </div>
-            <!-- <div class="swiper-pagination"></div> -->
-            <div class="swiper-button-next"><i class="fas fa-chevron-right"></i></div>
-            <div class="swiper-button-prev"><i class="fas fa-chevron-left"></i></div>
-          </div>
-          <!-- swiper end -->
-        </article>
-
         <!-- about ==============================================================-->
           <article id="about" class="box">
             <div class="container">
-              <h2 class="wow fadeInUp animated">ABOUT ME</h2>
+              <h2 class="wow fadeInUp animated"><a href="#">ABOUT ME</a></h2>
               <p class="wow fadeInUp animated" data-wow-delay="1s">I am areum Jeon</p>
               <div class="col-xs-12 col-sm-6 col-md-6 about_img wow fadeInUp animated">
                 <img class="wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="3s" src="images/about.png" alt="일러스트 이미지">
@@ -154,7 +118,7 @@
         <!-- skill ==========================================================-->
         <article id="skill" class="box">
           <div class="container">
-            <h2 class="wow fadeInUp animated">WHAT I CAN DO</h2>
+            <h2 class="wow fadeInUp animated"><a href="#">WHAT I CAN DO</a></h2>
             <p class="wow fadeInUp animated" data-wow-delay="1s">I am web publisher</p>
             <div class="skill_area">
               <div class="row">
@@ -210,37 +174,12 @@
             </div>
           </div>
         </article>
-        <!-- workprocess ====================================================-->
-        <article id="workprocess" class="box">
-          <div class="container">
-            <h2 class="wow fadeInUp animated">WORK PROCESS</h2>
-            <div class="row">
-              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-                <img class="wow fadeInUp animated" src="images/workprocess_icon1.png" alt="work process create icon 이미지">
-                <h4 class="wow fadeInUp animated" data-wow-delay=".5s">1. create</h4>
-              </div>
-              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-                <img class="wow fadeInUp animated" src="images/workprocess_icon2.png" alt="work process sketch icon 이미지">
-                <h4 class="wow fadeInUp animated" data-wow-delay=".5s">2. sketch</h4>
-              </div>
-              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-                <img class="wow fadeInUp animated" src="images/workprocess_icon3.png" alt="work process design icon 이미지">
-                <h4 class="wow fadeInUp animated" data-wow-delay=".5s">3. design</h4>
-              </div>
-              <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-                <img class="wow fadeInUp animated" src="images/workprocess_icon4.png" alt="work process publish icon 이미지">
-                <h4 class="wow fadeInUp animated" data-wow-delay=".5s">4. publish</h4>
-              </div>
-            </div>
-          </div>
-        </article>
-
 
         <!-- portfolio ======================================================-->
         <article id="work" class="box">
           <!-- isotope -->
           <div class="container">
-            <h2 class="wow fadeInUp animated">FEATURED WORK</h2>
+            <h2 class="wow fadeInUp animated"><a href="#">FEATURED WORK</a></h2>
             <div id="portfolio" class="wow fadeInUp animated">
               <ul class="nav nav-pills nav-justified">
                 <li class="active" data-sort-value=""><a href="#">All</a></li>
@@ -315,7 +254,7 @@
         </article>
         <article id="contact" class="box">
           <div class="container">
-            <h2 class="wow fadeInUp animated">GET IN TOUCH</h2>
+            <h2 class="wow fadeInUp animated"><a href="#">GET IN TOUCH</a></h2>
           <div class="wow fadeInUp animated contact_info">
             <p>"Taking a look at my portfolio is appreciated.</p>
             <P>Have any suggestion or interested in working together?</P>
